--- a/pom.xml
+++ b/pom.xml
@@ -1,132 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.ow2.mind</groupId>
-        <artifactId>mind-compiler</artifactId>
-        <version>2.1-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>org.ow2.mind</groupId>
+		<artifactId>mind-compiler</artifactId>
+		<version>2.1-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>dependency-tools</artifactId>
-    <packaging>jar</packaging>
-    <name>dependency-tools</name>
-    
-    <description>Tools to deal with dependencies between binary files</description>
-    
-    <properties>
-        <mind.test.cflags>-g -Wall -Werror -Wredundant-decls -Wunreachable-code
-            -Wstrict-prototypes -Wwrite-strings</mind.test.cflags>
-        <mind.test.compiler>gcc</mind.test.compiler>
-        <mind.test.compiler.gcc4>gcc4</mind.test.compiler.gcc4>
-    </properties>
+	<artifactId>dependency-tools</artifactId>
+	<packaging>jar</packaging>
+	<name>dependency-tools</name>
 
-    <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <version>${project.version}</version>
-        	<artifactId>mindc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <classifier>jdk15</classifier>
-        </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <groups>${test.groups}</groups>
-                    <systemPropertyVariables>
-                        <default.file.level>FINEST</default.file.level>
-                        <loggers.outfile>${project.build.testOutputDirectory}/test-log.txt</loggers.outfile>
-                        <mind.test.cflags>${mind.test.cflags}</mind.test.cflags>
-                        <mind.test.compiler>${mind.test.compiler}</mind.test.compiler>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    
-    <profiles>
-        <profile>
-            <id>stdc89</id>
+	<description>Tools to deal with dependencies between binary files</description>
 
-            <activation>
-                <property>
-                    <name>allTests</name>
-                    <value>true</value>
-                </property>
-            </activation>
+	<properties>
+		<mind.test.cflags>-g -Wall -Werror -Wredundant-decls -Wunreachable-code
+			-Wstrict-prototypes -Wwrite-strings</mind.test.cflags>
+		<mind.test.compiler>gcc</mind.test.compiler>
+		<mind.test.compiler.gcc4>gcc4</mind.test.compiler.gcc4>
+	</properties>
 
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>stdc89</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <reportsDirectory>${project.build.directory}/surefire-reports-stdc89</reportsDirectory>
-                                    <groups>${test.groups}</groups>
-                                    <systemPropertyVariables>
-                                        <default.file.level>FINEST</default.file.level>
-                                        <loggers.outfile>${project.build.testOutputDirectory}/test-log-stdc89.txt</loggers.outfile>
-                                        <mind.test.cflags>-std=c89 -D__MIND_NO_INLINE
-                                            ${mind.test.cflags}</mind.test.cflags>
-                                        <mind.test.compiler>${mind.test.compiler}</mind.test.compiler>
-                                    </systemPropertyVariables>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
+	<dependencies>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
+			<version>${project.version}</version>
+			<artifactId>mindc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<classifier>jdk15</classifier>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<groups>${test.groups}</groups>
+					<systemPropertyVariables>
+						<default.file.level>FINEST</default.file.level>
+						<loggers.outfile>${project.build.testOutputDirectory}/test-log.txt</loggers.outfile>
+						<mind.test.cflags>${mind.test.cflags}</mind.test.cflags>
+						<mind.test.compiler>${mind.test.compiler}</mind.test.compiler>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<!-- Generates binary assemblies at package phase. -->
+					<execution>
+						<id>bin-packages</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/assemble/bin-release.xml</descriptor>
+							</descriptors>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-        <profile>
-            <id>gcc4</id>
+	<profiles>
+		<profile>
+			<id>stdc89</id>
 
-            <activation>
-                <property>
-                    <name>allTests</name>
-                    <value>true</value>
-                </property>
-            </activation>
+			<activation>
+				<property>
+					<name>allTests</name>
+					<value>true</value>
+				</property>
+			</activation>
 
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>gcc4</id>
-                                <phase>test</phase>
-                                <goals>
-                                    <goal>test</goal>
-                                </goals>
-                                <configuration>
-                                    <reportsDirectory>${project.build.directory}/surefire-reports-gcc4</reportsDirectory>
-                                    <groups>${test.groups}</groups>
-                                    <systemPropertyVariables>
-                                        <default.file.level>FINEST</default.file.level>
-                                        <loggers.outfile>${project.build.testOutputDirectory}/test-log-gcc4.txt</loggers.outfile>
-                                        <mind.test.cflags>${mind.test.cflags}</mind.test.cflags>
-                                        <mind.test.compiler>${mind.test.compiler.gcc4}</mind.test.compiler>
-                                    </systemPropertyVariables>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>stdc89</id>
+								<phase>test</phase>
+								<goals>
+									<goal>test</goal>
+								</goals>
+								<configuration>
+									<reportsDirectory>${project.build.directory}/surefire-reports-stdc89</reportsDirectory>
+									<groups>${test.groups}</groups>
+									<systemPropertyVariables>
+										<default.file.level>FINEST</default.file.level>
+										<loggers.outfile>${project.build.testOutputDirectory}/test-log-stdc89.txt</loggers.outfile>
+										<mind.test.cflags>-std=c89 -D__MIND_NO_INLINE
+											${mind.test.cflags}</mind.test.cflags>
+										<mind.test.compiler>${mind.test.compiler}</mind.test.compiler>
+									</systemPropertyVariables>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>gcc4</id>
+
+			<activation>
+				<property>
+					<name>allTests</name>
+					<value>true</value>
+				</property>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>gcc4</id>
+								<phase>test</phase>
+								<goals>
+									<goal>test</goal>
+								</goals>
+								<configuration>
+									<reportsDirectory>${project.build.directory}/surefire-reports-gcc4</reportsDirectory>
+									<groups>${test.groups}</groups>
+									<systemPropertyVariables>
+										<default.file.level>FINEST</default.file.level>
+										<loggers.outfile>${project.build.testOutputDirectory}/test-log-gcc4.txt</loggers.outfile>
+										<mind.test.cflags>${mind.test.cflags}</mind.test.cflags>
+										<mind.test.compiler>${mind.test.compiler.gcc4}</mind.test.compiler>
+									</systemPropertyVariables>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
