Added documentation to the dependency-tools-examples

--- a/src/assemble/resources/dependency-tools-examples/mind-violation-example/Default.properties
+++ b/src/assemble/resources/dependency-tools-examples/mind-violation-example/Default.properties
@@ -21,12 +21,12 @@ outputDirectory = target
 includePath =
 
 # Qualified name of the root component to compile.
-targetComponent =starwars.Episode
+targetComponent =starwars.GalaxyFarFarAway
 # File name of produced binary (executable/shared library).
 # Will be located under: ${outputDirectory}/${configuration}/
 # where ${configuration} is the current file base name
 # and ${outputDirectory} is specified above.
-binaryName =Episode
+binaryName =StarWar
 
 # Optional assembler, compiler and linker commands to be used by Mindc. Default values = GCC.
 compilerCommand = gcc
