Fix mind-violation on windows

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 	</properties>
 
 	<dependencies>
+	    <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<version>${project.version}</version>
