--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                     <execution>
                         <id>copy-docbook-resources</id>
                         <!-- here the phase you need -->
-                        <phase>pre-site</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
@@ -99,7 +99,7 @@
                 <executions>
                     <execution>
                         <id>pdf</id>
-                        <phase>pre-site</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>generate-pdf</goal>
                         </goals>
@@ -112,7 +112,7 @@
                     </execution>
                     <execution>
                         <id>html-printable</id>
-                        <phase>pre-site</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>generate-html</goal>
                         </goals>
@@ -127,7 +127,7 @@
                     <!-- User Guide HTML executions -->
                     <execution>
                         <id>userguide-html</id>
-                        <phase>pre-site</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>generate-html</goal>
                         </goals>
@@ -159,7 +159,7 @@
                     </execution>
                     <execution>
                         <id>userguide-html-chunked</id>
-                        <phase>pre-site</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>generate-html</goal>
                         </goals>
