Examples projects clean-up. Rewording of part of User Guide

--- a/src/assemble/resources/examples/dependency-tools/mind-violation/.project
+++ b/src/assemble/resources/examples/dependency-tools/mind-violation/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mind-violation-example</name>
+	<name>mind-violation</name>
 	<comment></comment>
 	<projects>
 	</projects>
