--- a/src/assemble/resources/examples/dependency-tools/object-dependencies/Makefile
+++ b/src/assemble/resources/examples/dependency-tools/object-dependencies/Makefile
@@ -1,8 +1,13 @@
 CC= gcc
 LD= gcc
 OBJS= src/a.o src/b.o src/c.o src/d.o src/e.o src/main.o
-EXE = legacyC.out
+FILE = legacyC
 CFLAGS= -g -Wall
+ifneq (,$(findstring Windows, $(OS))) # Handle Windows-specific executable file
+    EXE = $(FILE).exe
+else
+	EXE = $(FILE)
+endif
 
 .c.o:
 	$(CC) $(CFLAGS) -c $< -o $@
