Removed XSL from module and moved it to mind-parent module

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 				</executions>
 			</plugin>
 			
+			<!-- User documentation generation -->
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>2.5</version>
@@ -100,6 +101,7 @@
 				<artifactId>docbkx-maven-plugin</artifactId>
 				<inherited>false</inherited>
 				<executions>
+					<!-- User Guide PDF execution -->
 					<execution>
 						<id>pdf</id>
 						<phase>prepare-package</phase>
@@ -109,10 +111,11 @@
 						<inherited>false</inherited>
 						<configuration>
 							<targetDirectory>${project.build.directory}/site</targetDirectory>
-							<foCustomization>${basedir}/src/docbkx/xsl/minddoc-fo.xsl</foCustomization>
-							<draftWatermarkImage>${basedir}/src/docbkx/images/draft.png</draftWatermarkImage>
+							<foCustomization>${project.build.directory}/site/xsl/minddoc-fo.xsl</foCustomization>
+							<draftWatermarkImage>${project.build.directory}/site/images/draft.png</draftWatermarkImage>
 						</configuration>
 					</execution>
+					<!-- User Guide HTML executions -->
 					<execution>
 						<id>html-printable</id>
 						<phase>prepare-package</phase>
@@ -123,11 +126,10 @@
 						<configuration>
 							<targetDirectory>${project.build.directory}/site/printable</targetDirectory>
 							<imgSrcPath>../</imgSrcPath>
-							<htmlCustomization>${basedir}/src/docbkx/xsl/minddoc-html-printable.xsl</htmlCustomization>
+							<htmlCustomization>${project.build.directory}/site/xsl/minddoc-html-printable.xsl</htmlCustomization>
 							<htmlStylesheet>../css/docbook-printable.css</htmlStylesheet>
 						</configuration>
 					</execution>
-					<!-- User Guide HTML executions -->
 					<execution>
 						<id>userguide-html</id>
 						<phase>prepare-package</phase>
@@ -138,7 +140,7 @@
 						<configuration>
 							<includes>dependency-tools.xml</includes>
 							<targetDirectory>${project.build.directory}/site</targetDirectory>
-							<htmlCustomization>${basedir}/src/docbkx/xsl/minddoc-html.xsl</htmlCustomization>
+							<htmlCustomization>${project.build.directory}/site/xsl/minddoc-html.xsl</htmlCustomization>
 							<htmlStylesheet>css/docbook.css</htmlStylesheet>
 							<customizationParameters>
 								<parameter>
@@ -172,7 +174,7 @@
 							<chunkedOutput>true</chunkedOutput>
 							<targetDirectory>${project.build.directory}/site/userGuide</targetDirectory>
 							<imgSrcPath>../</imgSrcPath>
-							<htmlCustomization>${basedir}/src/docbkx/xsl/minddoc-chunk.xsl</htmlCustomization>
+							<htmlCustomization>${project.build.directory}/site/xsl/minddoc-chunk.xsl</htmlCustomization>
 							<htmlStylesheet>../css/docbook-chunk.css</htmlStylesheet>
 							<customizationParameters>
 								<parameter>
@@ -196,10 +198,8 @@
 					</execution>
 				</executions>
 				<configuration>
+					<sourceDirectory>${basedir}/src/docbkx</sourceDirectory>
 					<targetDirectory>${project.build.directory}/site</targetDirectory>
-					<xslthlConfig>${basedir}/src/docbkx/xsl/xslthl-config.xml</xslthlConfig>
-					<highlightSource>1</highlightSource>
-					<xincludeSupported>true</xincludeSupported>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -234,7 +234,7 @@
 										<default.file.level>FINEST</default.file.level>
 										<loggers.outfile>${project.build.testOutputDirectory}/test-log-stdc89.txt</loggers.outfile>
 										<mind.test.cflags>-std=c89 -D__MIND_NO_INLINE
-										${mind.test.cflags}</mind.test.cflags>
+											${mind.test.cflags}</mind.test.cflags>
 										<mind.test.compiler>${mind.test.compiler}</mind.test.compiler>
 									</systemPropertyVariables>
 								</configuration>
